--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Nexus Blog</title>
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-<header th:include="fragments/header::header"/>
-<div th:include="fragments/posts::posts"/>
+<th:block th:insert="~{fragments/header::header}"/>
+<th:block th:insert="~{fragments/posts::posts}"/>
 
-<footer th:include="fragments/footer :: footer"/>
+<th:block th:insert="~{fragments/footer :: footer}"/>
 </body>
 </html>
