Add to local resources the jquery-3.6.0.min.js

--- a/src/main/resources/templates/postForm.html
+++ b/src/main/resources/templates/postForm.html
@@ -5,7 +5,7 @@
     <title>Posts Form</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/post_form.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/script/jquery-3.6.0.min.js"></script>
     <script src="/script/script.js"></script>
 </head>
 <body>
