Code refactoring, ConverterDto and RoleDto added, tests refactoring, new test added, provided remember-me functional

--- a/src/main/resources/static/css/auth.css
+++ b/src/main/resources/static/css/auth.css
@@ -42,4 +42,11 @@
     border-top: 1px solid #00ff00;
 }
 
+.remember-me label {
+    margin-left: 10px;
+}
 
+#remember-me{
+    margin: 5px 10px;
+    width: 5%;
+}
