--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,6 +28,10 @@
                     <label for="password">Password</label>
                     <input id="password" name="password" type="password" placeholder="Enter password">
                 </div>
+                <div class="remember-me">
+                    <label for="remember-me">Remember me:</label>
+                    <input id="remember-me" name="remember-me" type="checkbox" >
+                </div>
                 <div class="form-action">
                     <button type="submit">Login</button>
                     <a th:href="@{/registration}">Register</a>
