The mapping changed, a tests updated, code refactored

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -4,9 +4,9 @@
 </head>
 <body>
 <nav th:fragment="menu">
-  <a th:href="@{/blog}">Blog</a>
+  <a th:href="@{/}">Blog</a>
   <span>|</span>
-  <a th:href="@{/blog/myblog}">My blog</a>
+  <a th:href="@{/myblog}">My blog</a>
   <span>|</span>
   <a href="#">Contacts</a>
 </nav>
