--- a/src/main/resources/templates/postForm.html
+++ b/src/main/resources/templates/postForm.html
@@ -13,7 +13,7 @@
 
 <div class="container">
     <div class="post-container">
-        <form th:action="@{'/blog/update'}" method="post" th:object="${post}">
+        <form th:action="@{'/'}" method="post" th:object="${post}">
 
             <div class="post-form">
 
