--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -37,6 +37,7 @@
 
             <input type="hidden" name="username" th:value="${profile.username}"/>
             <input type="hidden" name="id" th:value="${profile.id}"/>
+            <input type="hidden" name="avatarPath" th:value="${profile.avatarPath}"/>
             <input type="hidden" name="name" th:value="${profile.name}"/>
             <input type="hidden" name="surname" th:value="${profile.surname}"/>
             <input type="hidden" name="birthdate" th:value="${profile.birthdate}"/>
