--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{index}">>
 <head>
-    <meta charset="UTF-8">
     <title>Error</title>
-    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<th:block th:insert="~{fragments/header::header}"/>
-
-<div class="container">
+<div class="error" layout:fragment="content">
     <p class="error" th:text="${error}"/>
 </div>
-
-<th:block th:insert="~{fragments/footer :: footer}"/>
-
 </body>
 </html>
