--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,41 +1,82 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Nexus Blog</title>
 
-    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+          crossorigin="anonymous">
 
 </head>
 <body>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
+        integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+        crossorigin="anonymous"></script>
+
 <th:block th:insert="~{fragments/header::header}"/>
-<div class="container">
-    <div class="post-container">
-        <button class="post-creator" th:attr="onclick='window.location.href=\'/new-post\''">Create new post</button>
 
-        <div class="post" th:each="post, status : ${posts}">
-            <div class="post-title">
-                <a class="user-name" th:href="@{'/profile/' + ${post.username}}">
-                    <h4 th:text="${post.username}"/>
-                </a>
-                <h3 class="post-name" th:text="${post.title}"/>
-            </div>
-            <div class="post-content">
-                <p th:text="${post.content}"/>
-            </div>
-            <div class="post-footer">
-                <div class="post-actions" th:if="${post.username.equals(#authentication.name)}">
-                    <a th:href="@{/post/{id}/remove(id=${post.id})}">Remove</a>
-                    <a th:href="@{/post/{id}/edit(id=${post.id})}">Edit</a>
+<div class="container-fluid mt-5 pt-4 p-5" style="min-height: 100vh;">
+    <div class="content" layout:fragment="content">
+        <div class="post-container">
+            <button class="btn btn-primary ms-5 shadow mb-5 rounded"
+                    th:attr="onclick='window.location.href=\'/new-post\''">
+                New post
+            </button>
+
+            <div class="card mt-4 shadow mb-5 bg-body-tertiary rounded"
+                 th:each="post, status : ${posts}">
+
+                <div class="card-header">
+
+                    <a class="user-name d-flex ms-4 mt-1 link-underline link-underline-opacity-0 link-dark"
+                       th:href="@{'/profile/' + ${post.username}}">
+
+                        <img class="img-thumbnail rounded-circle border-dark"
+                             th:if="${post.avatarPath != null}"
+                             th:src="@{'/uploads/avatar/' + ${post.avatarPath}}"
+                             alt="Avatar"
+                             style="height: 50px; width: 50px;"/>
+
+                        <h4 class="align-self-center ms-3" th:text="${post.username}"/>
+
+                    </a>
                 </div>
+                <div class="card-body">
+                    <h4 class="card-title" th:text="${post.title}"/>
+                    <p class="card-text" th:text="${post.content}"/>
+                </div>
+                <div class="card-footer text-body-secondary" style="height: 45px;">
+                    <div class="row">
+                        <div class="post-actions col" th:if="${post.username.equals(#authentication.name)}">
+                            <a class="link-underline link-underline-opacity-0 link-secondary"
+                               th:href="@{/post/{id}/remove(id=${post.id})}">Remove</a>
+                            <a class="link-underline link-underline-opacity-0 link-secondary ms-2"
+                               th:href="@{/post/{id}/edit(id=${post.id})}">Edit</a>
+                        </div>
 
-                <p th:text="${#dates.format(post.updated, 'yyyy-MM-dd HH:mm')}"/>
+                        <div class="text-end col">
+                            <p th:text="${#dates.format(post.updated, 'dd MMMM yyyy')}"/>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
 <th:block th:insert="~{fragments/footer :: footer}"/>
+
 </body>
 </html>
